--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -382,17 +382,21 @@
 
     <Button
         android:id="@+id/btnTrack"
-        android:layout_width="match_parent"
+        android:layout_width="129dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_margin="20dp"
+        android:layout_marginStart="142dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="140dp"
+        android:layout_marginBottom="14dp"
         android:background="@color/color_one"
+        android:onClick="goTrackCountries"
+        android:padding="5dp"
         android:text="click"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:padding="5dp"
-        android:onClick="goTrackCountries"/>
-
+        android:textSize="18sp" />
 
 
 </RelativeLayout>
