--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -368,7 +368,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:fontFamily="sans-serif-light"
-                            android:text="0"
+                            android:text="Rank"
                             android:textAlignment="textEnd"
                             android:textColor="@color/color_one"
                             android:textSize="18sp"
@@ -400,16 +400,16 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="142dp"
+        android:layout_marginStart="252dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="140dp"
-        android:layout_marginBottom="14dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="11dp"
         android:background="@color/color_one"
         android:onClick="goTrackCountries"
         android:padding="5dp"
         android:text="click"
         android:textColor="@android:color/white"
-        android:textSize="18sp"/>
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/button"
@@ -419,10 +419,55 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="142dp"
-        android:layout_marginEnd="143dp"
-        android:layout_marginBottom="79dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="270dp"
+        android:layout_marginBottom="13dp"
         android:text="click" />
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="104dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="21dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="78dp">
+
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="20dp"
+            android:text="Rank"
+            android:textAllCaps="true"
+            android:textSize="28sp"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@color/color_two" />
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="473dp"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/flag" />
+
+    </androidx.cardview.widget.CardView>
 
 
 </RelativeLayout>
