--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -422,7 +422,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="270dp"
         android:layout_marginBottom="13dp"
-        android:text="click" />
+        android:text="Map" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
