--- a/app/src/main/res/layout/activity_affected_countries.xml
+++ b/app/src/main/res/layout/activity_affected_countries.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/color_red"
+    android:background="#a29088"
     android:layout_height="match_parent"
     tools:context=".Countries">
 
