--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -469,7 +469,15 @@
 
     </androidx.cardview.widget.CardView>
 
-
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="79dp"
+        android:layout_height="44dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="173dp"
+        android:layout_marginBottom="13dp"
+        app:srcCompat="@drawable/androidnew" />
 
 
 </RelativeLayout>
