--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -311,4 +311,12 @@
 
         android:layout_centerHorizontal="true"
         android:text="open vaccine" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+
+        android:layout_centerHorizontal="true"
+        android:text="inform" />
 </LinearLayout>
