--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -127,18 +127,20 @@
             android:layout_width="473dp"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/flag" />
+        
 
     </androidx.cardview.widget.CardView>
 
     <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="79dp"
-        android:layout_height="44dp"
+        android:id="@+id/imageView7"
+        android:layout_width="76dp"
+        android:layout_height="55dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="173dp"
-        android:layout_marginBottom="13dp"
-        app:srcCompat="@drawable/androidnew" />
+        android:layout_marginBottom="5dp"
+        app:srcCompat="@drawable/copy" />
 
 
 </RelativeLayout>
+
