--- a/app/src/main/res/layout/activity_vaccine.xml
+++ b/app/src/main/res/layout/activity_vaccine.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/rclview"
+    android:background="#a29088"
     tools:context=".MainActivity">
 
 </androidx.recyclerview.widget.RecyclerView>
