--- a/app/src/main/res/layout/activity_inform.xml
+++ b/app/src/main/res/layout/activity_inform.xml
@@ -81,4 +81,14 @@
         android:textSize="24dp"
         android:text="View Data"
         android:layout_below="@id/btnDelete"/>
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="102dp"
+        android:layout_marginBottom="45dp"
+        app:srcCompat="@drawable/cap" />
 </RelativeLayout>
