--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="14dp"
         android:background="@color/color_one"
-        android:onClick="goTrackCountries"
+        android:onClick="ListCountries"
         android:padding="5dp"
         android:text="click List"
         android:textColor="@android:color/white"
