--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -27,7 +27,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="0"
-            android:id="@+id/tvCountry"
+            android:id="@+id/tCountry"
             android:textAlignment="textEnd"
             android:textSize="18sp"
 
@@ -63,7 +63,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="0"
-            android:id="@+id/tvCases"
+            android:id="@+id/tCases"
             android:textAlignment="textEnd"
             android:textSize="18sp"
 
@@ -99,7 +99,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="0"
-            android:id="@+id/tvTodayCases"
+            android:id="@+id/tTodayCases"
             android:textAlignment="textEnd"
             android:textSize="18sp"
 
@@ -135,7 +135,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="0"
-            android:id="@+id/tvDeaths"
+            android:id="@+id/tDeaths"
             android:textAlignment="textEnd"
             android:textSize="18sp"
 
@@ -171,7 +171,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="0"
-            android:id="@+id/tvTodayDeaths"
+            android:id="@+id/tTodayDeaths"
             android:textAlignment="textEnd"
             android:textSize="18sp"
 
@@ -207,7 +207,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="0"
-            android:id="@+id/tvRecovered"
+            android:id="@+id/tRecovered"
             android:textAlignment="textEnd"
             android:textSize="18sp"
 
@@ -243,7 +243,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="0"
-            android:id="@+id/tvActive"
+            android:id="@+id/tActive"
             android:textAlignment="textEnd"
             android:textSize="18sp"
 
@@ -279,7 +279,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="0"
-            android:id="@+id/tvCritical"
+            android:id="@+id/tCritical"
             android:textAlignment="textEnd"
             android:textSize="18sp"
             android:textColor="@color/color_one"
