--- a/app/src/main/res/layout/activity_okhttp__test.xml
+++ b/app/src/main/res/layout/activity_okhttp__test.xml
@@ -5,10 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Okhttp_Test">
-
-
+    
     <TextView
-        android:id="@+id/text_view_result"
+        android:id="@+id/text_view"
         android:layout_width="420dp"
         android:layout_height="726dp"
         android:text=""
