--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -336,4 +336,15 @@
         android:layout_centerHorizontal="true"
         android:text="ADD" />
 
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+
+        android:layout_centerHorizontal="true"
+        android:text="Retrofit" />
+
+
+
+
 </LinearLayout>
