--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,10 +25,11 @@
 
             <ImageView
                 android:id="@+id/imageView2"
-                android:layout_width="match_parent"
-                android:layout_height="87dp"
+                android:layout_width="wrap_content"
+                android:layout_height="117dp"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/coronavirus" />
+                app:srcCompat="@drawable/stop" />
+
         </LinearLayout>
 
 
@@ -140,6 +141,8 @@
         android:layout_marginEnd="173dp"
         android:layout_marginBottom="5dp"
         app:srcCompat="@drawable/copy" />
+
+
 
 
 </RelativeLayout>
