readme et screenshot

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -334,7 +334,7 @@
         android:layout_height="45dp"
 
         android:layout_centerHorizontal="true"
-        android:text="ADD" />
+        android:text="AD" />
 
     <Button
         android:id="@+id/button6"
